# rust_digest_auth

./: .env  Cargo.toml  README.md  auth_demo.sh
migration/: init.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
utils/: script.py
