[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio-postgres = "0.7.10"
deadpool-postgres = "0.10.2"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.12.1"
chrono = "0.4.38"
uuid = "1.9.1"
jsonwebtoken = "8.3.0"
md5 = "0.7.0"
tokio = { version = "1", features = ["full"] }
